syntax = "proto2";
message AProduct{
  required int64 id = 1;
  required string description = 2;
  required int32 count = 3;
}

message UAinitWorld{
	required int64 worldID = 1;
	required int64 seqNum = 2;
	
}

message AUconnectedWorld{
	required bool success = 1;
	repeated int64 acks = 2;
}


message AUreqPickup {
	required int32 whid = 1;
	required int32 destinationX = 2;
	required int32 destinationY = 3;
	required int64 shipID = 4;  //Amazon generate shipID
	repeated AProduct products = 5;
	required int64 seqNum = 6;

}

message UApickupConfirmed {
	required int32 whid = 1;
	required int64 shipID = 2; 
	required int32 truckID = 3;
	repeated int64 acks = 4;
}

message UAtruckArrived {
	required int32 whid = 1;
	required int64 shipID = 2;
	required int32 truckID = 3;
	required int64 seqNum = 4;
}

message AUarriveConfirmed {
	required int64 shipID = 1;
	repeated int64 acks = 2;
}

message AUreqDelivery {
	required int64 shipID = 1;
	required int64 seqNum = 2;
}

message UAstartDelivery {
	repeated int64 acks = 1;
}

message AUquery {
	required int64 shipID = 1;
	required int64 seqNum = 2;
}

message UAstatus {
	required string status = 1;
	required int64 acks = 2;
}

message UAdelivered {
	required int64 shipID = 1;
	required int64 seqNum = 2;
}

mesage AUdeliverConfirmed {
	required int64 shipID = 1;
	required int64 acks = 2;
}

message AUchangeDestn {
	required int64 shipID = 1;
	required int32 destinationX = 2;
	required int32 destinationY = 3;
	required int64 seqNum = 4;
}

message UAchangeResp {
	required bool success = 1;
	required int64 acks = 2;
}

message Err{
	required string err = 1;
	required int64 originseqnum = 2;
	required int64 seqnum = 3;
}

message UAcommands{
	repeated UApickupConfirmed pickupConf = 1;
	repeated UAtruckArrived truckArr = 2;
	repeated UAstartDelivery startDeli = 3;
	repeated UAstatus status = 4;
	repeated UAdelivered delivered = 5;
	repeated UAchangeResp changeResp = 6;
	repeated Err err = 7;
	optional bool disconnect = 8;
}

message AUcommands{
	repeated AUreqPickup pickup = 1;
	repeated AUarriveConfirmed arriveConf = 2;
	repeated AUreqDelivery delivery =  3;
	repeated AUquery query = 4;
	repeated AUdeliverConfirmed deliveredConf = 5;
	repeated AUchangeDestn changeDest = 6;
	repeated Err err = 7;
	optional bool disconnect = 8;
}
